week6-security/W6D7/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-nginx
  namespace: secure-app
spec:
  replicas: 1

  selector:
    matchLabels:
      app: secure-nginx

  template:
    metadata:
      labels:
        app: secure-nginx

    spec:
      serviceAccountName: app-sa

      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101

      containers:
      - name: nginx
        image: nginx:1.27.5

        ports:
        - containerPort: 80

        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL

        volumeMounts:
        - name: cache
          mountPath: /var/cache/nginx

        - name: run
          mountPath: /var/run

        - name: tmp
          mountPath: /tmp

      volumes:
      - name: cache
        emptyDir: {}

      - name: run
        emptyDir: {}

      - name: tmp
        emptyDir: {}
