week6-security/W6D7/test-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-client
  namespace: secure-app
  labels:
    access: allowed

spec:
  restartPolicy: Never

  containers:
  - name: curl
    image: curlimages/curl
    command:
    - sleep
    - "3600"
