week6-security/W6D7/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-nginx
  namespace: secure-app
spec:
  selector:
    app: secure-nginx

  ports:
  - port: 80
    targetPort: 80
