week6-security/W6D7/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-test-client
  namespace: secure-app
spec:
  podSelector:
    matchLabels:
      app: secure-nginx

  policyTypes:
  - Ingress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: allowed

    ports:
    - protocol: TCP
      port: 80
